infra/k8s/base/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer
  namespace: just-task-it
  labels:
    app: grafana
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: grafana
  ports:
  - name: grafana
    port: 80
    targetPort: 3000
    protocol: TCP
